--- a/PageModels/PageModels.csproj
+++ b/PageModels/PageModels.csproj
@@ -1,18 +1,16 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
+    <ApplicationIcon />
+    <StartupObject />
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Selenium.Support" Version="4.0.0-beta2" />
     <PackageReference Include="Selenium.WebDriver" Version="4.0.0-beta2" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="90.0.4430.2400" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Models\Backend\" />
   </ItemGroup>
 
 </Project>
